# Simulation-Client

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  Simulation Client.sln  Simulation Client.vcxproj  Simulation Client.vcxproj.filters  imgui.ini
.github/workflows/: pull_request.yml  run_tests.yml
Config/: bloodCellConfig.json  blood_cell_config.json  bloodcells_definition.hpp  config.json  general_config.json  general_config2.json  template_blood_cell_presets.hpp  vein_config.json
Doc/html/: add__vein_8cpp.html  annotated.html  annotated_dup.js  bifurcation__final__mesh__generation_8cpp.html  bifurcation__node_8cpp.html  bifurcation__node_8hpp.html  bifurcation__node_8hpp.js  bifurcation__node_8hpp_source.html  blood__cell__type_8hpp.html  blood__cell__type_8hpp.js  blood__cell__type_8hpp_source.html  blood__cells__definition_8cpp.html  blood__cells__definition_8hpp.html  blood__cells__definition_8hpp.js  blood__cells__definition_8hpp_source.html  blood__details_8cpp.html  blood__editor_8cpp.html  blood__editor_8cpp.js  blood__editor_8hpp.html  blood__editor_8hpp.js  blood__editor_8hpp_source.html  blood__list_8cpp.html  blood__list_8cpp.js  camera_8cpp.html  camera_8cpp.js  camera_8hpp.html  camera_8hpp.js  camera_8hpp_source.html  cinder_8cpp.html  cinder_8cpp.js  class_client_communication_endpoint-members.html  class_client_communication_endpoint.html  class_client_communication_endpoint.js  class_cylinder_solid_color_shader-members.html  class_cylinder_solid_color_shader.html  class_cylinder_solid_color_shader.js  class_server_communication_controller-members.html  class_server_communication_controller.html  class_server_communication_controller.js  class_shader-members.html  (+422 more)
Doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  (+89 more)
Libraries/include/glm/gtx/: matrix_decompose.hpp  matrix_decompose.inl
Libraries/include/imgui/backend/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
Libraries/include/imgui_file_dialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
Libraries/include/imgui_stdlib/: imgui_stdlib.cpp
Libraries/include/mbedtls/: config.h
Libraries/include/tps/: tps.hpp
Libraries/lib/: mbedcrypto.lib  mbedtls.lib  mbedx509.lib  pthreadVC3.lib  pthreadVCE3.lib  pthreadVSE3.lib
Simulation Client/: Simulation Client.cpp  Simulation Client.vcxproj  Simulation Client.vcxproj.filters
SimulationConfigData/: template_blood_cell_presets.hpp  template_blood_cells_definition.hpp  template_vein_definition.hpp
SimulationGeneratedConfig/: blood_cell_presets.hpp  blood_cells_definition.hpp  graphics.hpp  physics.hpp  simulation.hpp  vein_definition.hpp
src/: defines.hpp  main.cpp
src/bloodcell/: blood_editor.cpp  blood_editor.hpp
src/communication/: CommunicationController.cpp  CommunicationController.hpp  client.cpp  client_endpoint.cpp  client_endpoint.hpp  server_communication_controller.cpp  server_communication_controller.hpp
src/graphics/: camera.cpp  camera.hpp  glcontroller.cpp  glcontroller.hpp  inputcontroller.cpp  inputcontroller.hpp  light.hpp  mesh.cpp  model.cpp  shader.cpp  shader.hpp  spring_lines.cpp  spring_lines.hpp  stream_input_controller.cpp  stream_input_controller.hpp
src/graphics/models/: blood_cells_model.cpp  blood_cells_model.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  spring_lines.cpp  spring_lines.hpp  vein_model.cpp  vein_model.hpp
src/graphics/objects/: blood_cell_def.hpp  blood_cells.hpp  spring.hpp  vein.hpp
src/gui/: GUIController.cpp  GUIController.hpp  extensions.cpp  extensions.hpp  gui_controller.cpp  gui_controller.hpp
src/gui/components/: add_vein.cpp  blood_details.cpp  blood_editor.cpp  blood_list.cpp  dialog_window.cpp  general_editor.cpp  main_screen.cpp  menu_bar.cpp  runtime_type_select.cpp  simulation.cpp  stream.cpp  vein_editor.cpp
src/gui/components/general_editor_tabs/: graphics_editor.cpp  physics_editor.cpp  simulation_editor.cpp
src/gui/components/simulations/: local_simulation.cpp  manual_simulation.cpp
src/gui/themes/: cinder.cpp  enemymouse.cpp  spectrum.cpp  spectrum.hpp  spectrum_dark.hpp  spectrum_light.hpp  themes.hpp
src/objects/: bloodcellmodel.cpp  bloodcellmodel.hpp
src/serializable/: blood_cell_type.hpp  blood_cells_definition.cpp  blood_cells_definition.hpp  config_data.hpp  config_manager.cpp  config_manager.hpp  cpp_serializable.hpp  exceptions.hpp  spring.hpp  vein_definition.hpp  vein_node_json_conversion.hpp
src/serializable/blood_cell_json_conversion/: blood_cell_type.hpp  blood_cells_definition.cpp  blood_cells_definition.hpp  spring.hpp
src/serializable/general_config/: general_config.hpp  graphics_config.cpp  graphics_config.hpp  physics_config.cpp  physics_config.hpp  simulation_config.cpp  simulation_config.hpp
src/serializable/util/: nameof.hpp  vec3_json_conversion.hpp  vec_to_string.cpp  vec_to_string.hpp
src/simulation/: simulation_instance.cpp  simulation_instance.hpp  vein_calculation.cpp  vein_calculation.hpp
src/streaming/: stream_frame.cpp  stream_frame.hpp  stream_input_controller.cpp  stream_input_controller.hpp  stream_manager.cpp  stream_manager.hpp  stream_receiver.cpp  stream_receiver.hpp
src/vein/: glm_to_tps.hpp  vein_generator.cpp  vein_generator.hpp  vein_mesh.cpp  vein_mesh.hpp
src/vein/nodes/: bifurcation_final_mesh_generation.cpp  bifurcation_node.cpp  bifurcation_node.hpp  cylinder_node.cpp  cylinder_node.hpp  json_constructors.cpp  node.cpp  node.hpp  root_node.cpp  root_node.hpp
tests/: CMakeLists.txt  json_config_tests.cpp  sample_test.cpp  vein_generator_tests.cpp
